--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Developmentl",
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "MyKey": "MyKey from Env variable"
       }
     },
