--- a/EmployeeManagement.csproj
+++ b/EmployeeManagement.csproj
@@ -1,23 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+    <UserSecretsId>3669bddb-3e36-4f04-89b7-e2d87551a060</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Remove="Views\Administration1\**" />
     <Content Remove="Views\Administration1\**" />
     <EmbeddedResource Remove="Views\Administration1\**" />
     <None Remove="Views\Administration1\**" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Remove="Migrations\20200610205123_Extend_IdentityUser.cs" />
     <Compile Remove="Migrations\20200610205123_Extend_IdentityUser.Designer.cs" />
   </ItemGroup>
-
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
@@ -28,7 +27,4 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.2" />
   </ItemGroup>
-
-
-
 </Project>
